# AquaFeeder

./: CMakeLists.txt  LICENSE  README.md  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  aquafeeder_time.c  aquafeeder_time.h  feed_http.c  feed_http.h  feed_schedule_store.c  feed_schedule_store.h  feed_scheduler.c  feed_scheduler.h  feeder_amount.c  feeder_amount.h  feeder_notify.c  feeder_notify.h  stepper_motor.c  stepper_motor.h  wifi_setup.c  wifi_setup.h
